--- a/BleApp/MainPage.xaml
+++ b/BleApp/MainPage.xaml
@@ -27,10 +27,13 @@
                 <DataTemplate>
                     <Grid Padding="12" ColumnDefinitions="*,Auto" RowDefinitions="Auto,Auto">
                         <Label Grid.Row="0" Grid.Column="0"
-                   Text="{Binding Title}" FontAttributes="Bold" />
+                    Text="{Binding Title}" FontAttributes="Bold" />
                         <Label Grid.Row="1" Grid.Column="0"
-                   Text="{Binding Subtitle}" FontSize="12"
-                   TextColor="{DynamicResource SecondaryTextColor}" />
+                    Text="{Binding Subtitle}" FontSize="12"
+                    TextColor="{DynamicResource SecondaryTextColor}" />
+                        <Label Grid.RowSpan="2" Grid.Column="1"
+                    VerticalOptions="Center"
+                    Text="{Binding Rssi, StringFormat='RSSI {0} dBm'}" />
                     </Grid>
                 </DataTemplate>
             </CollectionView.ItemTemplate>
